- создает шаблон для создания постов с фото

--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
 
   <!-- Подключаем скрипты -->
   <script src="js/functions.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
